--- a/_menu-partial.html
+++ b/_menu-partial.html
@@ -1,5 +1,3 @@
-{{ it |> withoutKeys('it') | toList |> to => links }}
-
 <style>
 .navbar {
     color: #FFF;
@@ -47,7 +45,7 @@
         <a class="title" href="/">{{ hostServiceName }}</a>
 
         <ul class="navbar-nav">
-            {{#each links}}
+            {{#each it.ownProps()}}
             <li {{ {active: matchesPathInfo(Key)} |> htmlClass }}>
                 <a class="nav-link" href="{{Key}}">{{Value}}</a>
             </li>
